alignment fix testimonials

--- a/sass/gutenberg/blocks/_testimonials-block.scss
+++ b/sass/gutenberg/blocks/_testimonials-block.scss
@@ -3,6 +3,16 @@
   width: fit-content;
   max-width: 100%;
   margin: var(--padding-container-vertical) auto;
+  max-width: $width-wide;
+  padding-left: var(--padding-container-horizontal);
+  padding-right: var(--padding-container-horizontal);
+  width: 100%;
+  @media (min-width: ($width-wide + 40px)) {
+    padding-left: 0;
+    padding-right: 0;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
 .testimonials-inner{
   max-width: $width-wide;
